include/libqgraphicswidget.h

typedef struct QAction QAction;
typedef struct QCloseEvent QCloseEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QFont QFont;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsLayout QGraphicsLayout;
typedef struct QGraphicsLayoutItem QGraphicsLayoutItem;
typedef struct QGraphicsSceneHoverEvent QGraphicsSceneHoverEvent;
typedef struct QGraphicsSceneMoveEvent QGraphicsSceneMoveEvent;
typedef struct QGraphicsSceneResizeEvent QGraphicsSceneResizeEvent;
typedef struct QGraphicsWidget QGraphicsWidget;
typedef struct QHideEvent QHideEvent;
typedef struct QKeySequence QKeySequence;
typedef struct QMarginsF QMarginsF;
typedef struct QMetaObject QMetaObject;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPalette QPalette;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QShowEvent QShowEvent;
typedef struct QSizeF QSizeF;
typedef struct QStyle QStyle;
typedef struct QStyleOption QStyleOption;
typedef struct QStyleOptionGraphicsItem QStyleOptionGraphicsItem;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QGraphicsWidget* QGraphicsWidget_new();
QGraphicsWidget* QGraphicsWidget_new2(QGraphicsItem* parent);
QGraphicsWidget* QGraphicsWidget_new3(QGraphicsItem* parent, int wFlags);
QMetaObject* QGraphicsWidget_MetaObject(const QGraphicsWidget* self);
void* QGraphicsWidget_Metacast(QGraphicsWidget* self, const char* param1);
int QGraphicsWidget_Metacall(QGraphicsWidget* self, int param1, int param2, void** param3);
libqt_string QGraphicsWidget_Tr(const char* s);
QGraphicsLayout* QGraphicsWidget_Layout(const QGraphicsWidget* self);
void QGraphicsWidget_SetLayout(QGraphicsWidget* self, QGraphicsLayout* layout);
void QGraphicsWidget_AdjustSize(QGraphicsWidget* self);
int QGraphicsWidget_LayoutDirection(const QGraphicsWidget* self);
void QGraphicsWidget_SetLayoutDirection(QGraphicsWidget* self, int direction);
void QGraphicsWidget_UnsetLayoutDirection(QGraphicsWidget* self);
QStyle* QGraphicsWidget_Style(const QGraphicsWidget* self);
void QGraphicsWidget_SetStyle(QGraphicsWidget* self, QStyle* style);
QFont* QGraphicsWidget_Font(const QGraphicsWidget* self);
void QGraphicsWidget_SetFont(QGraphicsWidget* self, QFont* font);
QPalette* QGraphicsWidget_Palette(const QGraphicsWidget* self);
void QGraphicsWidget_SetPalette(QGraphicsWidget* self, QPalette* palette);
bool QGraphicsWidget_AutoFillBackground(const QGraphicsWidget* self);
void QGraphicsWidget_SetAutoFillBackground(QGraphicsWidget* self, bool enabled);
void QGraphicsWidget_Resize(QGraphicsWidget* self, QSizeF* size);
void QGraphicsWidget_Resize2(QGraphicsWidget* self, double w, double h);
QSizeF* QGraphicsWidget_Size(const QGraphicsWidget* self);
void QGraphicsWidget_SetGeometry(QGraphicsWidget* self, QRectF* rect);
void QGraphicsWidget_SetGeometry2(QGraphicsWidget* self, double x, double y, double w, double h);
QRectF* QGraphicsWidget_Rect(const QGraphicsWidget* self);
void QGraphicsWidget_SetContentsMargins(QGraphicsWidget* self, double left, double top, double right, double bottom);
void QGraphicsWidget_SetContentsMarginsWithMargins(QGraphicsWidget* self, QMarginsF* margins);
void QGraphicsWidget_GetContentsMargins(const QGraphicsWidget* self, double* left, double* top, double* right, double* bottom);
void QGraphicsWidget_SetWindowFrameMargins(QGraphicsWidget* self, double left, double top, double right, double bottom);
void QGraphicsWidget_SetWindowFrameMarginsWithMargins(QGraphicsWidget* self, QMarginsF* margins);
void QGraphicsWidget_GetWindowFrameMargins(const QGraphicsWidget* self, double* left, double* top, double* right, double* bottom);
void QGraphicsWidget_UnsetWindowFrameMargins(QGraphicsWidget* self);
QRectF* QGraphicsWidget_WindowFrameGeometry(const QGraphicsWidget* self);
QRectF* QGraphicsWidget_WindowFrameRect(const QGraphicsWidget* self);
int QGraphicsWidget_WindowFlags(const QGraphicsWidget* self);
int QGraphicsWidget_WindowType(const QGraphicsWidget* self);
void QGraphicsWidget_SetWindowFlags(QGraphicsWidget* self, int wFlags);
bool QGraphicsWidget_IsActiveWindow(const QGraphicsWidget* self);
void QGraphicsWidget_SetWindowTitle(QGraphicsWidget* self, libqt_string title);
libqt_string QGraphicsWidget_WindowTitle(const QGraphicsWidget* self);
int QGraphicsWidget_FocusPolicy(const QGraphicsWidget* self);
void QGraphicsWidget_SetFocusPolicy(QGraphicsWidget* self, int policy);
void QGraphicsWidget_SetTabOrder(QGraphicsWidget* first, QGraphicsWidget* second);
QGraphicsWidget* QGraphicsWidget_FocusWidget(const QGraphicsWidget* self);
int QGraphicsWidget_GrabShortcut(QGraphicsWidget* self, QKeySequence* sequence);
void QGraphicsWidget_ReleaseShortcut(QGraphicsWidget* self, int id);
void QGraphicsWidget_SetShortcutEnabled(QGraphicsWidget* self, int id);
void QGraphicsWidget_SetShortcutAutoRepeat(QGraphicsWidget* self, int id);
void QGraphicsWidget_AddAction(QGraphicsWidget* self, QAction* action);
void QGraphicsWidget_AddActions(QGraphicsWidget* self, libqt_list /* of QAction* */ actions);
void QGraphicsWidget_InsertActions(QGraphicsWidget* self, QAction* before, libqt_list /* of QAction* */ actions);
void QGraphicsWidget_InsertAction(QGraphicsWidget* self, QAction* before, QAction* action);
void QGraphicsWidget_RemoveAction(QGraphicsWidget* self, QAction* action);
libqt_list /* of QAction* */ QGraphicsWidget_Actions(const QGraphicsWidget* self);
void QGraphicsWidget_SetAttribute(QGraphicsWidget* self, int attribute);
bool QGraphicsWidget_TestAttribute(const QGraphicsWidget* self, int attribute);
int QGraphicsWidget_Type(const QGraphicsWidget* self);
void QGraphicsWidget_Paint(QGraphicsWidget* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
void QGraphicsWidget_PaintWindowFrame(QGraphicsWidget* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
QRectF* QGraphicsWidget_BoundingRect(const QGraphicsWidget* self);
QPainterPath* QGraphicsWidget_Shape(const QGraphicsWidget* self);
void QGraphicsWidget_GeometryChanged(QGraphicsWidget* self);
void QGraphicsWidget_LayoutChanged(QGraphicsWidget* self);
bool QGraphicsWidget_Close(QGraphicsWidget* self);
void QGraphicsWidget_InitStyleOption(const QGraphicsWidget* self, QStyleOption* option);
QSizeF* QGraphicsWidget_SizeHint(const QGraphicsWidget* self, int which, QSizeF* constraint);
void QGraphicsWidget_UpdateGeometry(QGraphicsWidget* self);
QVariant* QGraphicsWidget_ItemChange(QGraphicsWidget* self, int change, QVariant* value);
QVariant* QGraphicsWidget_PropertyChange(QGraphicsWidget* self, libqt_string propertyName, QVariant* value);
bool QGraphicsWidget_SceneEvent(QGraphicsWidget* self, QEvent* event);
bool QGraphicsWidget_WindowFrameEvent(QGraphicsWidget* self, QEvent* e);
int QGraphicsWidget_WindowFrameSectionAt(const QGraphicsWidget* self, QPointF* pos);
bool QGraphicsWidget_Event(QGraphicsWidget* self, QEvent* event);
void QGraphicsWidget_ChangeEvent(QGraphicsWidget* self, QEvent* event);
void QGraphicsWidget_CloseEvent(QGraphicsWidget* self, QCloseEvent* event);
void QGraphicsWidget_FocusInEvent(QGraphicsWidget* self, QFocusEvent* event);
bool QGraphicsWidget_FocusNextPrevChild(QGraphicsWidget* self, bool next);
void QGraphicsWidget_FocusOutEvent(QGraphicsWidget* self, QFocusEvent* event);
void QGraphicsWidget_HideEvent(QGraphicsWidget* self, QHideEvent* event);
void QGraphicsWidget_MoveEvent(QGraphicsWidget* self, QGraphicsSceneMoveEvent* event);
void QGraphicsWidget_PolishEvent(QGraphicsWidget* self);
void QGraphicsWidget_ResizeEvent(QGraphicsWidget* self, QGraphicsSceneResizeEvent* event);
void QGraphicsWidget_ShowEvent(QGraphicsWidget* self, QShowEvent* event);
void QGraphicsWidget_HoverMoveEvent(QGraphicsWidget* self, QGraphicsSceneHoverEvent* event);
void QGraphicsWidget_HoverLeaveEvent(QGraphicsWidget* self, QGraphicsSceneHoverEvent* event);
void QGraphicsWidget_GrabMouseEvent(QGraphicsWidget* self, QEvent* event);
void QGraphicsWidget_UngrabMouseEvent(QGraphicsWidget* self, QEvent* event);